--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                   <div class="row"><span class="label">الكمية:</span> ${match["الكمية"]}</div>
                   <div class="row"><span class="label">السعر:</span> ${match["السعر"]}</div>
                     <div class="row"><span class="label">الاجمالي:</span> ${match["الاجمالي"]}</div>
+                    <div class="row"><span class="label">مكان التسليم:</span> ${match["مكان التسليم"]}</div>
                     <div class="row"><span class="label">حالة الطلب:</span> ${match["حالة الطلب"]}</div>
                 `;
                     } else {
